--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   path_provider:
   google_mobile_ads: 
   flutter_pdfview: ^1.2.7
+  open_file: ^3.2.1
 
 dev_dependencies:
   flutter_test:
