ENH : .env 설정 및 Api 추가

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   google_mobile_ads: 
   flutter_pdfview: ^1.2.7
   open_file: ^3.2.1
+  flutter_dotenv: 
 
 dev_dependencies:
   flutter_test:
