ENH : dotenv 로드 이슈 수정 및 파일 변환  api 통신 테스트

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ flutter:
   assets:
     - assets/svgs/
     - assets/lotties/
+    - .env
+
   fonts:
     - family: Yeongdeok Snow Crab
       fonts:
